# task-dispatcher

./: CMakeLists.txt  README.md
licenses/: 1024cores.txt  spmc_queue.txt
src/: future.hh  main.cc  scheduler.cc  scheduler.config.cc  scheduler.config.cc.autosave  scheduler.hh  td.hh
src/common/: macros.hh  panic.cc  panic.hh  spin_lock.hh  win32_sanitized.hh
src/container/: mpmc_queue.hh  mpsc_queue.hh  spmc_queue.hh  task.cc  task.hh  version_ring.hh
src/native/: fiber.hh  thread.cc  thread.hh
src/task-dispatcher/: AutoCounter.cc  AutoCounter.hh  BatchedSubmission.hh  CallableSubmission.hh  CounterHandle.hh  CriticalSection.cc  CriticalSection.hh  LambdaSubmission.hh  Scheduler.cc  Scheduler.hh  SchedulerConfig.cc  SchedulerConfig.hh  fwd.hh  main.cc  scheduler.cc  scheduler.config.cc  scheduler.hh  sync.hh  td-lean.hh  td.hh
src/task-dispatcher/common/: api.hh  macros.hh  math_intrin.hh  panic.hh  spin_lock.hh  system_info.cc  system_info.hh
src/task-dispatcher/container/: ChaseLevQueue.hh  ConcurrentQueue.hh  FIFOQueue.hh  MPMCQueue.hh  Task.hh  VersionRing.hh  linked_pool.cc  linked_pool.hh  mpmc_queue.hh  mpsc_queue.hh  spmc_queue.hh  task.cc  task.hh  version_ring.hh
src/task-dispatcher/lib/moodycamel/: blockingconcurrentqueue.h  concurrentqueue.h
src/task-dispatcher/native/: Fiber.cc  Fiber.hh  Threading.cc  Threading.hh  fiber.cc  fiber.hh  thread.hh  util.cc  util.hh
tests/: CMakeLists.txt  api.cc  fiber-nested.cc  fiber.cc  scheduler-dependency.cc  scheduler.cc  task.cc
